Numero de Propiedades de cada Propietario

--- a/PagosCondominios.csproj
+++ b/PagosCondominios.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConteoPropiedades.cs" />
     <Compile Include="DatosGenerales.cs" />
     <Compile Include="DatosPropiedades.cs" />
     <Compile Include="DatosPropietario.cs" />
