--- a/PagosCondominios.csproj
+++ b/PagosCondominios.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConteoPropiedades.cs" />
+    <Compile Include="CuotaAltaBaja.cs" />
     <Compile Include="DatosGenerales.cs" />
     <Compile Include="DatosPropiedades.cs" />
     <Compile Include="DatosPropietario.cs" />
