--- a/PagosCondominios.csproj
+++ b/PagosCondominios.csproj
@@ -84,5 +84,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="datosPropiedades.txt" />
+    <Content Include="datosPropietarios.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
